--- a/firebase.html
+++ b/firebase.html
@@ -7,9 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
-    <script src="javascript/javascript.js"></script>
+
 
   </head>
   <body>
@@ -36,7 +37,7 @@
                       <input class="form-control" id="destination-input" type="role">
                     </div>
                   <div class="form-group">
-                        <label for="time-input">First Team Time:</label>
+                        <label for="time-input">First Team Time (HH:mm - ex: 02:00)</label>
                           <input class="form-control" id="time-input" type="number">
                         </div>
                       <div class="form-group">
@@ -69,8 +70,8 @@
               </div>
             </div>
           </div>
-          <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-          <!-- <script src="javascript/javascript.js"></script> -->
+          <!-- <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script> -->
+          <script src="javascript/javascript.js"></script>
           <!-- <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script> -->
 
         </body>
